--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,18 @@ body {
 }
 
 .section {
-  position: relative;
+  position: absolute;
+  contain: layout;
   background-color: grey;
-  margin: 30px 0px;
 }
 
 .segment {
   position: absolute;
   contain: layout;
-  background-color: blue;
+  background-color: seashell;
 }
 
 .tile {
   position: absolute;
-  background-color: yellow;
+  background-color: grey;
 }
